--- a/index.html
+++ b/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Bus Mall</title>
 </head>
+
 <body>
+    <section class="all-page">
+        <header>
+            <h1>Bus Mall</h1>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+            </nav>
+        </header>
+        <main>
+            <section id='img' class="image-section">
+                <img src="" alt="" id="firstImg">
+                <img src="" alt="" id="secondImg">
+                <img src="" alt="" id="thirdImag">
+            </section>
+            <center><button id="Results">View Results</button></center>
+            <section id='result-section' class="result">
+            </section>
+        </main>
+        <footer>All right reserve &copy; Renad-2021 ASAC @ LTUC</footer>
+    </section>
     <script src="app.js"></script>
 </body>
+
 </html>
