--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             </section>
             <center><button id="Results">View Results</button></center>
             <section id='result-section' class="result">
-            </section> 
+            </section>
             <canvas id="myChart" width="400" height="200"></canvas>
         </main>
         <footer>All right reserve &copy; Renad-2021 ASAC @ LTUC</footer>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.3.2/dist/chart.min.js"></script>
     <script src="app.js"></script>
 </body>
 
